# calendar

./: CLAUDE.md  README.md  TODO.md  calendar.css  print_calendar.py  pyproject.toml  test_holidays.yaml
calendar_app/: __init__.py  __main__.py  calendar_gen.py  cli.py  holidays_loader.py
tests/: test_holidays.py  test_weeknumber.py
