[project]
name = "calendar"
description = "Printable calendar with week numbers"
authors = [
    {name = "teutoburg",email = "ghost@instruct.at"}
]
requires-python = ">=3.13"
dependencies = [
    "more-itertools (>=10.8.0,<11.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
